0.0703 2010-09-26
 - Documented Response's as_string method.

0.0702 September 1, 2010
 - Facebook changed their API slightly and it broke stuff, so that is now fixed.
 - Added link to the cookbook from the main page.

0.0701 August 17, 2010
 - Added a link to the talk I gave at MadMongers about Facebook::Graph. It could be useful to people getting started with Facebook::Graph.

0.0700 August 13, 2010
 - Added recipe #2 to the cookbook.
 - Added signed request support for canvas applications. Thanks to Rainer Größlinger.
 - New prereqs: Digest::SHA and MIME::Base64::URLSafe.

0.0600 August 11, 2010
 - Fixed a runtime error created in 0.0500.
 - Added likes publishing.
 - Added comment publishing.
 - Added note publishing.
 - Added link publishing.
 - Added event publishing.
 - Added RSVPs for events.

0.0500 August 10, 2010
 - Added feed/wall publishing.

0.0402 July 15, 2010
 - Fixed a pod error.

0.0401 July 14, 2010
 - Added a cookbook and the first recipe.
 - Made the third element of the exception, the original exception type from Facebook.
 - Fixed a bug with the Any::Moose transition.

0.0400 July 13, 2010
 - Added Facebook::Graph::Picture for accessing the pictures of any object.
 - Fixed POD docs thanks to Tim Heaney for the patch.
 - Migrated to Any::Moose for those people that want to use Mouse instead of Moose. Thanks to tehmoth for the patch.
 - Added a note about using IO::Socket::SSL instead of Crypt::SSLeay. Thanks to Søren Lund for the idea.

0.0300 July 11, 2010
 - Added convert_sessions method to make it easier for existing apps to use Facebook::Graph. Thanks to Rainer Größlinger for the idea.
 - Converted Facebook::Graph::Query::Response into Facebook::Graph::Response, so it could be generically used and/or subclassed by other modules.

0.0201 July 10, 2010
 - Better error messages on failed queries.
 - Fixed the AccessToken parsing problem.
 - Fixed another POD formatting problem.
 - More cleanup.